[update]レイアウトの整理

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,22 +4,13 @@
     <title><%=full_title(yield(:title))%></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta charset="utf-8">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= render'layouts/rails_default'%>
   </head>
-  <header class="navbar navbar-fixed-top navbar-inverse">
-    <div class="container">
-      <%= link_to "sample app", "#", id: "logo"%>
-          <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Home",   '#' %></li>
-            <li><%= link_to "Help",   '#' %></li>
-            <li><%= link_to "Log in", '#' %></li>
-          </ul>
-    </div>
-  </header>
   <body>
-    <%= yield %>
+    <%= render'layouts/header' %>
+    <div class="container">
+      <%= yield %>
+      <%= render'layouts/footer'%>
+    </div>
   </body>
 </html>
