[add]エラーメッセージを表示するように修正

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,18 +3,19 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
+    <%= render 'shared/error_messages'%>
     <%= form_with(model: @user) do |f| %>
       <%= f.label :name %>
-      <%= f.text_field :name %>
+      <%= f.text_field :name, class: 'form_control' %>
 
       <%= f.label :email %>
-      <%= f.text_field :email %>
+      <%= f.email_field :email, class: 'form_control' %>
 
       <%= f.label :password %>
-      <%= f.text_field :password %>
+      <%= f.password_field :password, class: 'form_control'  %>
 
       <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.text_field :password_confirmation %>
+      <%= f.password_field :password_confirmation, class: 'form_control'  %>
 
       <%= f.submit "Create my account", class: "btn btn-primary" %>
     <% end %>
