--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,23 +1,9 @@
 <%provide(:title, "Sign up")%>
+<%provide(:button_text, "Create my account")%>
 <h1>Sign up</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= render 'shared/error_messages'%>
-    <%= form_with(model: @user) do |f| %>
-      <%= f.label :name %>
-      <%= f.text_field :name, class: 'form_control' %>
-
-      <%= f.label :email %>
-      <%= f.email_field :email, class: 'form_control' %>
-
-      <%= f.label :password %>
-      <%= f.password_field :password, class: 'form_control'  %>
-
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation, class: 'form_control'  %>
-
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
-    <% end %>
+    <%= render 'form' %>
   </div>
 </div>
