--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -4,7 +4,7 @@
   <span class="content">
     <%= micropost.content%>
     <% if micropost.image.attached? %>
-      <%= image_tag micropost.image if micropost.image.attached? %>  
+      <%= image_tag micropost.image.variant(:display)%>  
     <% end %>
   </span>
   <span class="timestamp">
